--- a/hlx_statics/blocks/resource-card-small.css
+++ b/hlx_statics/blocks/resource-card-small.css
@@ -3,7 +3,7 @@ main div.resource-card-small> div{
   flex-direction: row;
   border: 1px solid #eaeaea;
   border-radius: 4px;
-  margin-left: 32px;
+  padding-left: 32px;
   margin-right: 32px;
   margin-bottom: 32px;
 } 
@@ -17,6 +17,6 @@ main div.resource-card-small p {
   text-align: left;
 } 
 main div.resource-card-small-container-inner  {
-  flex-basis: 40%;
+  flex-basis: 41.666%;
 } 
 
