--- a/hlx_statics/styles.css
+++ b/hlx_statics/styles.css
@@ -188,7 +188,6 @@ footer>div:nth-of-type(2) div > ul > li a {
 }
 
 main .section-wrapper > div {
-    margin: auto;
     padding-top: 60px;
 }
 
@@ -288,4 +287,5 @@ main div p {
 main div.resource-card-flex-container {
   display: flex;
   flex-direction: row;
+  justify-content: center;
 }
